--- a/ICEStarCraftModule/ICEStarCraftModule.vcproj
+++ b/ICEStarCraftModule/ICEStarCraftModule.vcproj
@@ -119,6 +119,7 @@
 				EnableIntrinsicFunctions="true"
 				AdditionalIncludeDirectories="../include"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;EXAMPLEAIMODULE_EXPORTS;_SECURE_SCL 0"
+				MinimalRebuild="true"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
